--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,35 +1,32 @@
 name: Docker CI/CD
 
 on:
-   push: 
-    branches: [ "main" ] 
+  push:
+    branches: [ "main" ]
+
 jobs:
-    deploy:
-        runs-on: ubuntu-latest
+  deploy:
+    runs-on: ubuntu-latest   # 👈 IMPORTANT
 
-        steps:
-            - name: Checkout code
-              uses: actions/checkout@v4
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-            - name: Set up Node
-              uses: actions/setup-node@v4
-              with:
-                node-version: 24
-            
-            - name: Login to Docker hub
-              uses: docker/login-action@v3
+      - name: Set up Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22
 
-              with:
-                username:${{ secrets.DOCKER_USERNAME }}
-                password:${{ secrets.DOCKER_PASSWORD }}
-            
-            - name: Build Frontend Docker image
-              run: docker build -t sanjubora84/eadminclient:latest ./client
-            - name: Build Backend Docker image
-              run: docker build -t sanjubora84/eadminbackend:latest ./server
+      - name: Build Docker frontend image
+        run: docker build -t sanjubora84/eadminclient:latest ./client
+      - name: Build Docker backend image
+        run: docker build -t sanjubora84/eadminbackend:latest ./server
+      - name: Login to Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
 
-            - name: Push Frontend image to dockerhub
-              run: docker push sanjubora84/eadminclient:latest
-            - name: Push Backend image to dockerhub
-              run: docker push sanjubora84/eadminbackend:latest
+      - name: Push Docker frontend image
+        run: docker push sanjubora84/eadminclient:latest
+      - name: Push Docker Backend image
+        run: docker push sanjubora84/eadminbackend:latest
 
+     
